// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InheritedSecurityDetails component should render collections correctly 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
      style="margin-top: -8px;"
    >
      Inherited security policy details
    </h6>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
      style="margin-top: 8px;"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:11111
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        >
          Theses Assessors (2)
        </p>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:22222
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Another test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        >
          Staff and Students (4)
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`InheritedSecurityDetails component should render collections for datastreams correctly 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
      style="margin-top: -8px;"
    >
      Inherited datastream security policy details
    </h6>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
      style="margin-top: 8px;"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:11111
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        >
          Theses Assessors (2)
        </p>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:22222
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Another test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        >
          Staff and Students (4)
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`InheritedSecurityDetails component should render collections for datastreams correctly with empty policy description 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
      style="margin-top: -8px;"
    >
      Inherited datastream security policy details
    </h6>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
      style="margin-top: 8px;"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:11111
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        />
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:22222
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Another test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`InheritedSecurityDetails component should render collections for record correctly with empty policy description 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
      style="margin-top: -8px;"
    >
      Inherited security policy details
    </h6>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
      style="margin-top: 8px;"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:11111
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        />
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
        >
          UQ:22222
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
        >
          Another test collection
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`InheritedSecurityDetails component should render properly 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
      style="margin-top: -8px;"
    >
      Inherited security policy details
    </h6>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
      style="margin-top: 8px;"
    />
  </div>
</div>
`;
